<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    u
    <item
        android:id="@+id/action1"
        android:orderInCategory="100"
        android:title="@string/lblMenuSalvar"
        app:showAsAction="never" />

    u
    <item
        android:id="@+id/action3_Editar"
        android:orderInCategory="100"
        android:title="@string/lblMenuEditar"
        android:visible="false"
        app:showAsAction="never" />

    u
    <item
        android:id="@+id/action2"
        android:orderInCategory="100"
        android:title="@string/lblMenuDeletar"
        app:showAsAction="never" />

    u
    <item
        android:id="@+id/action00"
        android:orderInCategory="100"
        android:title="@string/lblMenuDeletar"
        app:showAsAction="never" />

</menu>